--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,1 +1,35 @@
 <h1>Make your form here</h1>
+<form class="form" action="/pirates" method="post">
+
+  <label for="name">Enter name: </label>
+  <input type="text" name="pirate[name]" value="">
+
+  <label for="height">Enter height: </label>
+  <input type="text" name="pirate[height]" value="">
+
+  <label for="weight">Enter weight: </label>
+  <input type="text" name="pirate[weight]" value="">
+
+
+  <label for="pirate[ships][][name]">Enter Ship Name: </label>
+  <input type="text" name="pirate[ships][][name]" value="">
+
+  <label for="pirate[ships][][type]">Enter Ship Type: </label>
+  <input type="text" name="pirate[ships][][type]" value="">
+
+  <label for="pirate[ships][][booty]">Enter Ship Name: </label>
+  <input type="text" name="pirate[ships][][booty]" value="">
+
+
+  <label for="pirate[ships][][name]">Enter Ship Name: </label>
+  <input type="text" name="pirate[ships][][name]" value="">
+
+  <label for="pirate[ships][][type]">Enter Ship Type: </label>
+  <input type="text" name="pirate[ships][][type]" value="">
+
+  <label for="pirate[ships][][booty]">Enter Ship Name: </label>
+  <input type="text" name="pirate[ships][][booty]" value="">
+
+  <input type="submit" name="Submit">
+
+</form>
