Automatically backed up by Learn

--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,10 +1,10 @@
 <h1>Make your form here</h1>
 <form class="form" action="/pirates" method="post">
 
-  <label for="name">Enter name: </label>
+  <label for="pirate[name]">Enter name: </label>
   <input type="text" name="pirate[name]" value="">
 
-  <label for="height">Enter height: </label>
+  <label for="pirate[height]">Enter height: </label>
   <input type="text" name="pirate[height]" value="">
 
   <label for="weight">Enter weight: </label>
