--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -7,7 +7,7 @@
   <label for="pirate[height]">Enter height: </label>
   <input type="text" name="pirate[height]" value="">
 
-  <label for="weight">Enter weight: </label>
+  <label for="pirate[weight]">Enter weight: </label>
   <input type="text" name="pirate[weight]" value="">
 
 
