Automatically backed up by Learn

--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -17,7 +17,7 @@
   <label for="pirate[ships][][type]">Enter Ship Type: </label>
   <input type="text" name="pirate[ships][][type]" value="">
 
-  <label for="pirate[ships][][booty]">Enter Ship Name: </label>
+  <label for="pirate[ships][][booty]">Enter Booty: </label>
   <input type="text" name="pirate[ships][][booty]" value="">
 
 
@@ -27,7 +27,7 @@
   <label for="pirate[ships][][type]">Enter Ship Type: </label>
   <input type="text" name="pirate[ships][][type]" value="">
 
-  <label for="pirate[ships][][booty]">Enter Ship Name: </label>
+  <label for="pirate[ships][][booty]">Enter Booty: </label>
   <input type="text" name="pirate[ships][][booty]" value="">
 
   <input type="submit" name="Submit">
