--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -12,10 +12,10 @@
 
 
   <label for="pirate[ships][][name]">Enter Ship Name: </label>
-  <input type="text" name="pirate[ships][][name]" value="">
+  <input type="text" name="pirate[ships][][name]" id="ship_name_1">
 
   <label for="pirate[ships][][type]">Enter Ship Type: </label>
-  <input type="text" name="pirate[ships][][type]" value="">
+  <input type="text" name="pirate[ships][][type]" id="ship_type_1>
 
   <label for="pirate[ships][][booty]">Enter Booty: </label>
   <input type="text" name="pirate[ships][][booty]" value="">
