--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -30,6 +30,6 @@
   <label for="pirate[ships][][booty]">Enter Booty: </label>
   <input type="text" name="pirate[ships][][booty]" id="ship_booty_2">
 
-  <input type="submit" name="Submit">
+  <input type="submit" name="Submit" id="Submit">
 
 </form>
